src/compiletest/qcell_noalloc-06.stderr
error[E0499]: cannot borrow `owner` as mutable more than once at a time
  --> src/compiletest/qcell_noalloc-06.rs:14:20
   |
13 |     let c1mutref = owner.as_mut().rw(&c1);
   |                    -------------- first mutable borrow occurs here
14 |     let c2mutref=  owner.as_mut().rw(&c2);  // Compile error
   |                    ^^^^^^^^^^^^^^ second mutable borrow occurs here
15 |     *c1mutref += 1;
   |     -------------- first borrow later used here
